# conductor-ai

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  COPILOT_INTEGRATION.md  LICENSE  Makefile  README.md  bandit-report.json  conductor.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-and-quality.yml
config/: settings.py
context/: context_2026-03-11T21-49-36.728272.json  context_2026-03-11T23-02-22.624342.json  context_2026-03-11T23-13-30.374064.json  context_2026-03-11T23-24-04.807645.json  context_2026-03-11T23-25-21.814601.json  context_2026-03-11T23-26-02.857094.json  context_2026-03-11T23-26-15.032258.json  context_2026-03-11T23-26-50.963505.json
docs/: IDE_INTEGRATION.md  MCP_SETUP.md  MCP_SETUP_GUIDE.md  QUICK_START.md
scripts/: check-personal-paths.sh  check-secrets.sh  check-user-content.sh  test-gitignore.sh  test-security-locally.sh
src/: _version.py  conductor.py  conductor_cli.py  conductor_main.py
src/ai/: __init__.py  orchestrator.py
src/ai/context/: __init__.py  memory.py  workflow_context.py
src/ai/providers/: __init__.py  base.py  claude.py  openai.py
src/core/: doc_processor.py  mcp_manager.py  scheduler.py  workflow_engine.py
src/integrations/: __init__.py  confluence_integration.py  github_integration.py  jira_integration.py  mcp_base.py
src/mcp/: __init__.py  bridge.py  client.py
src/skills/: __init__.py  base.py  daily_ops.py  documentation.py  project_mgmt.py
tests/: __init__.py  test_basic.py
workflows/: .workflow_state.json  daily_standup_template.md  documentation_review_template.md  failed_authentication_alert.md  follow_up_template.md  search_head_cluster_troublesho.md  test_workflow.md  weekly_service_owner_check_in.md
